--- a/styles.css
+++ b/styles.css
@@ -128,8 +128,14 @@ a {
 /* ----------------------------Hero---------------------- */
 .section.hero {
     text-align: center;
+    max-width: 1600px;
     height: 600px;
     padding: 200px 0px;
+    margin: 0 auto;
+
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(./img/hero.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
     background-color: #2F303A;
 }
 
@@ -158,6 +164,7 @@ a {
     color: var(--white-color);
     background-color:var(--brand-color);
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    border-color: var(--brand-color);
     border-radius: 4px;
 }
  /* -----------------------Advantage------------------ */
@@ -303,9 +310,34 @@ a {
     border-radius: 50%;
 }
 
-.social-icon {
-    
+/*  -----------------------Постоянные клиенты---------------- */
+
+.clients-list {
+    display: flex;
 }
+
+.clients-item:not(:last-child) {
+    margin-right: 30px;
+}
+
+.clients-link {
+    display: flex;
+    width: 170px;
+    height: 92px;
+    justify-content: center;
+    align-items: center;
+
+    fill: #AFB1B8;
+    border: 1px solid #AFB1B8;
+    border-radius: 4px;
+}
+
+.clients-link:hover {
+    fill: var(--brand-color);
+    border-color: var(--brand-color);
+}
+
+
 /* --------------------Footer------------------- */
 
 .footer.section {
@@ -317,6 +349,7 @@ a {
 
 .footer.container {
     display: flex;
+    align-items: baseline;
 }
 
 .address-wrap {
@@ -348,9 +381,6 @@ a {
     line-height: 1.71;
     
     color: rgba(255, 255, 255, 0.6);
-}
-.appeal-wrap {
-
 }
 
 .footer-appeal {
